crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_transform_multiple_block_scoped_variables_in_loop.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useSignal } from "@qwik.dev/core";
export default qrl(() => import("./test.tsx_test_5GvkoOCMrJc"), "test_5GvkoOCMrJc");

============================= test.tsx_test_5GvkoOCMrJc.js (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
export const test_5GvkoOCMrJc = () => {
  const arr = useSignal(['a', 'b'])
  return (
    <div>
      {arr.value.map((val, i) => {
        const index = i+1;
		const value = val.toUpperCase();
        return <div onClick$={() => console.log(value, index)}>{val}</div>
      })}
    </div>
  );
};
/*
{
  "origin": "test.tsx",
  "name": "test_5GvkoOCMrJc",
  "entry": null,
  "displayName": "test.tsx_test",
  "hash": "5GvkoOCMrJc",
  "canonicalFilename": "test.tsx_test_5GvkoOCMrJc",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    73,
    349
  ]
}
*/
== DIAGNOSTICS ==
[]
