crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_transform_qrls_in_ternary_expression.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 1011
expression: output
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_FieldInput_component_V4XAtJSTRKg = /*#__PURE__*/ qrl(()=>import("./test.tsx_FieldInput_component_V4XAtJSTRKg"), "FieldInput_component_V4XAtJSTRKg");
//
export const FieldInput = /*#__PURE__*/ componentQrl(q_FieldInput_component_V4XAtJSTRKg);

============================= test.tsx_FieldInput_component_V4XAtJSTRKg.js (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
export const FieldInput_component_V4XAtJSTRKg = () => {
	const enabled = useSignal(false);
	const input = useSignal("");

  return (
     <input
		id="input"
		onInput$={
		enabled.value
			? $((ev, el) => {
				input.value = el.value;
			})
			: undefined
		}
		onFocus$={() => {
			enabled.value = true;
		}}
	/>
  );
};
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_V4XAtJSTRKg",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "V4XAtJSTRKg",
  "canonicalFilename": "test.tsx_FieldInput_component_V4XAtJSTRKg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    87,
    372
  ]
}
*/
============================= test.tsx_FieldInput_component_input_onInput_zBzGtdHkCmE.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const FieldInput_component_input_onInput_zBzGtdHkCmE = (ev, el) => {
	const input = _captures[0];
	input.value = el.value;
};

/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_onInput_zBzGtdHkCmE",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_onInput",
  "hash": "zBzGtdHkCmE",
  "canonicalFilename": "test.tsx_FieldInput_component_input_onInput_zBzGtdHkCmE",
  "path": "",
  "extension": "js",
  "parent": "FieldInput_component_V4XAtJSTRKg",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "input"
  ],
  "loc": [
    242,
    291
  ],
  "paramNames": [
    "el",
    "ev"
  ]
}
*/
== DIAGNOSTICS ==
[]
