crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_transform_three_nested_loops_handler_captures_outer_only.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { onClickQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);

============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = () => {
  const data = useSignal([
    [['a', 'b'], ['c', 'd']],
    [['e', 'f'], ['g', 'h']],
  ]);
  return (
    <div>
      {data.value.map((plane, pi) => {
        const planeId = 'p' + pi;
        return (
          <div key={pi}>
            {plane.map((row, ri) => (
              <div key={ri}>
                {row.map((cell, ci) => (
                  <button key={ci} onClick$={() => console.log(planeId)}>
                    {cell}
                  </button>
                ))}
              </div>
            ))}
          </div>
        );
      })}
    </div>
  );
};
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    73,
    671
  ]
}
*/
============================= test.tsx_test_component_button_q_e_click_qwSL5gM03T4.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const test_component_button_q_e_click_qwSL5gM03T4 = () => {
	const planeId = _captures[0];
	return console.log(planeId);
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_button_q_e_click_qwSL5gM03T4",
  "entry": null,
  "displayName": "test.tsx_test_component_button_q_e_click",
  "hash": "qwSL5gM03T4",
  "canonicalFilename": "test.tsx_test_component_button_q_e_click_qwSL5gM03T4",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "planeId"
  ],
  "loc": [
    474,
    500
  ]
}
*/
== DIAGNOSTICS ==
[]
