crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_transform_two_handlers_capturing_different_block_scope_in_loop.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);

============================= test.tsx_test_component_div_div_button_q_e_click_hCFE1Zqizzw.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const test_component_div_div_button_q_e_click_hCFE1Zqizzw = () => {
    const index = _captures[0];
    return console.log(index);
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_div_div_button_q_e_click_hCFE1Zqizzw",
  "entry": null,
  "displayName": "test.tsx_test_component_div_div_button_q_e_click",
  "hash": "hCFE1Zqizzw",
  "canonicalFilename": "test.tsx_test_component_div_div_button_q_e_click_hCFE1Zqizzw",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "index"
  ],
  "loc": [
    317,
    341
  ]
}
*/
============================= test.tsx_test_component_div_div_span_q_e_keydown_JMCQrlWndWA.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const test_component_div_div_span_q_e_keydown_JMCQrlWndWA = () => {
    const label = _captures[0];
    return console.log(label);
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_div_div_span_q_e_keydown_JMCQrlWndWA",
  "entry": null,
  "displayName": "test.tsx_test_component_div_div_span_q_e_keydown",
  "hash": "JMCQrlWndWA",
  "canonicalFilename": "test.tsx_test_component_div_div_span_q_e_keydown_JMCQrlWndWA",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onKeyDown$",
  "captures": true,
  "captureNames": [
    "label"
  ],
  "loc": [
    388,
    412
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = () => {
  const arr = useSignal(['a', 'b'])
  return (
    <div>
      {arr.value.map((val, i) => {
        const index = i + 1;
        const label = val.toUpperCase();
        return (
          <div>
            <button onClick$={() => console.log(index)}>{val}</button>
            <span onKeyDown$={() => console.log(label)}>{label}</span>
          </div>
        )
      })}
    </div>
  );
};
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    73,
    484
  ]
}
*/
== DIAGNOSTICS ==
[]
