crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_work.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 1013
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$ } from "@qwik.dev/core";
import { globalAction$ } from "@qwik.dev/router";
export const useSecretAction = qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
export const SecretForm = qrl(() => import("./test.tsx__1_iZVV0eoW44k"), "_1_iZVV0eoW44k");

============================= test.tsx__1_iZVV0eoW44k.js (ENTRY POINT) ==
import { useSecretAction } from "./test";
export const _1_iZVV0eoW44k = () => {
			const action = useSecretAction();
			return <div>{action.value}</div>
		};
/*
{
  "origin": "test.tsx",
  "name": "_1_iZVV0eoW44k",
  "entry": null,
  "displayName": "test.tsx__1",
  "hash": "iZVV0eoW44k",
  "canonicalFilename": "test.tsx__1_iZVV0eoW44k",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    234,
    330
  ]
}
*/
============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
export const _u6BtPnK76q4 = async (payload) => console.log(payload) || "hi";

/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "globalAction$",
  "captures": false,
  "loc": [
    134,
    203
  ],
  "paramNames": [
    "payload"
  ]
}
*/
== DIAGNOSTICS ==
[]
