crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_wrap_inner_inline_component_prop.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 1016
expression: output
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);

============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT) ==
import { useStore } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = (props: { id: number }) => {
      const renders = useStore(
        {
          count: 0,
        },
        { reactive: false }
      );
      renders.count++;
      const rerenders = renders.count + 0;
      const _ref = {};
      _ref.Id = (props: any) => <div>_ref.Id: {props.id}</div>;
      const { Id } = _ref;
      return (
        <>
          <Id id={props.id} />
          {rerenders}
        </>
      );
    };
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    467
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==
[]
