crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_wrap_logical_expression_in_template.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useSignal } from "@qwik.dev/core";
export default qrl(() => import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");

============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT) ==
import { useSignal } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = () => {
			const count = useSignal(0);
			const count2 = useSignal(0);
			return (
				<div>
					{(count || count2).value}
				</div>
			);
		};
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    77,
    233
  ]
}
*/
== DIAGNOSTICS ==
[]
